all content changed with there actual content

--- a/index.html
+++ b/index.html
@@ -89,36 +89,30 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                        <img src="./images/matthew-perry.jpeg"
                             alt="">
                         <div class="homepage-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
-                            <a href="">Read more</a>
+                            <h3>Took Advantage Of His Addiction": 5 Charged Over Matthew Perry's Death</h3>
+                            <p>Matthew Perry, who played Chandler Bing on the popular TV sitcom from 1994 to 2004, was found unresponsive in his swimming pool last year at age 54.</p>
+                            <a href="./pages/worldnews/worldnews_4.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                        <img src="./images/ksenia-karelina.webp"
                             alt="">
                         <div class="homepage-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
-                            <a href="">Read more</a>
+                            <h3>L.A. ballerina sentenced to 12 years in Russian penal colony for 'high treason'</h3>
+                            <p>Ksenia Karelina was visiting family in Russia when investigators searched her phone and found she had donated to a Ukrainian charity.</p>
+                            <a href="./pages/worldnews/worldnews_5.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                        <img src="./images/taylor swift.webp"
                             alt="">
                         <div class="homepage-Card">
-                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                obcaecati
-                                voluptatem temporibus reprehenderit iure mollitia!</p>
-                            <a href="">Read more</a>
+                            <h3>Taylor Swift fans flock to London for final leg of Eras Tour after Vienna terrorism plot</h3>
+                            <p>Swiftie festivities in London are in full swing amid tightened security as the European leg of the Eras Tour takes its final bow..</p>
+                            <a href="./pages/worldnews/worldnews_6.html">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -133,36 +127,30 @@
 
                     <div class="cards">
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="./images/Adani_business.jpeg"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
-                                <a href="">Read more</a>
+                                <h3>Adani now allowed to sell Bangladesh-bound power in India</h3>
+                                <p>Adani Power coalfired power plant under contract to offer all its output to Bangladesh can now provide the domestic market</p>
+                                <a href="./pages/Business/business_news_1.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="./images/market_business.jpg"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
-                                <a href="">Read more</a>
+                                <h3>Sensex snaps two-day losing streak on rebound in IT shares</h3>
+                                <p>Benchmark Sensex closed higher by 150 points on Wednesday, snapping its two-day losing streak following a rally in IT stocks amid a surge in the US markets.</p>
+                                <a href="./pages/Business/business_news_2.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="./images/economic_business.jpg"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
-                                <a href="">Read more</a>
+                                <h3>Wholesale price inflation drops to 2.04% in July</h3>
+                                <p>Inflation in India's wholesale prices dropped from a 16-month high of 3.4% in June, to 2.04% in July, with the rise in food prices</p>
+                                <a href="./pages/Business/business_news_3.html">Read more</a>
                             </div>
                         </div>
                     </div>
@@ -181,36 +169,30 @@
 
                     <div class="cards">
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="./images/pixelwatch.jpeg"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
-                                <a href="">Read more</a>
+                                <h3>Pixel Watch 3 With Brighter Display Launched in India .</h3>
+                                <p>Pixel Watch 3 company's third generation smartwatch launched in India promises 36 hours of battery life & available in two display size.</p>
+                                <a href="./pages/tech/tech1.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="./images/pixel-9-pro-series_b46d56.webp"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
-                                <a href="">Read more</a>
+                                <h3>Pixel 9 Pro and Pixel 9 Pro XL launched.</h3>
+                                <p>Google at its flagship Made by Google event in Mountain View, California, introduced the top-of-the-line Pixel 9 Pro and the Pixel 9 Pro XL smartphones.</p>
+                                <a href="./pages/tech/tech2.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
-                            <img src="https://img.freepik.com/free-photo/worker-with-cup-coffee-reading-news_1149-191.jpg?t=st=1723439188~exp=1723442788~hmac=a7da1b0c52c515c21b3d674b450703deddbbc5f412aa3800ff51765bd0818d81&w=740"
+                            <img src="./images/vivo.jpeg"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
-                                    obcaecati
-                                    voluptatem temporibus reprehenderit iure mollitia!</p>
-                                <a href="">Read more</a>
+                                <h3>Vivo,Xiaomi leads as Indian smartphone market in 2024.</h3>
+                                <p>Vivo,Xiaomi & Samsung dominated Indian smartphone market,which reach 69 million units,marks a 7% year-over-year growth in the first half of 2024. </p>
+                                <a href="./pages/tech/tech3.html">Read more</a>
                             </div>
                         </div>
                     </div>
