add address of the page

--- a/pages/culture/cultural_news.html
+++ b/pages/culture/cultural_news.html
@@ -67,7 +67,7 @@
                         <div class="homepage-Card">
                             <h3>Tarun Tahiliani defends Olympic uniforms criticism.</h3>
                             <p>Fashion designer Tarun Tahiliani has firmly defended the design of the Indian contingent's uniforms for the 2024 Paris Olympics, following widespread criticism. Despite social media backlash labelling the outfits as an "eyesore" and "mediocre," </p>
-                            <a href="">Read more</a>
+                            <a href="cultural_news1.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
