--- a/pages/culture/cultural_news1.html
+++ b/pages/culture/cultural_news1.html
@@ -60,7 +60,7 @@
 
     <!--Read More content started-->
     <div class="readmore-heading-details">
-        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <a href="cultural_news.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
         <h1> The Tarun Tahiliani defends Olympic uniforms criticism.</h1>
     </div>
     
