--- a/pages/culture/cultural_news2.html
+++ b/pages/culture/cultural_news2.html
@@ -60,8 +60,8 @@
 
     <!--Read More content started-->
     <div class="readmore-heading-details">
-        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
-        <h1> The Tarun Tahiliani defends Olympic uniforms criticism.</h1>
+        <a href="Businesani ds_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <h1> The Tarun Tahiliefends Olympic uniforms criticism.</h1>
     </div>
     
 
