--- a/pages/Business/business_news_3.html
+++ b/pages/Business/business_news_3.html
@@ -62,7 +62,7 @@
 
         <!--Read More content started-->
         <div class="readmore-heading-details">
-            <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+            <a href="cultural_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
             <h1>Wholesale price inflation drops to 2.04% in July</h1>
         </div>
 
