latest news updated

--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,7 +49,7 @@
                     <li><a href="">world news</a></li>
                     <li><a href="">Sports</a></li>
                     <li><a href="./../tech/tech.html">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
+                    <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="">Business</a></li>
                     <li><a href="">Culture</a></li>
                     <li><a href="">Education</a></li>
@@ -61,61 +62,61 @@
         <div class="homepage-content">
             <div class="homepage-Cards-container">
                 <div class="homepage-heading-details">
-                    <h1>Business News</h1>  
-                    
+                    <h1>Business News</h1>
+
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="./../../images/Adani_business.jpeg"
-                            alt="Business_news 1">
+                        <img src="./../../images/Adani_business.jpeg" alt="Business_news 1">
                         <div class="homepage-Card">
                             <h3>Adani now allowed to sell Bangladesh-bound power in India</h3>
-                            <p>Adani Power coalfired power plant under contract to offer all its output to Bangladesh can now provide the domestic market</p>
+                            <p>Adani Power coalfired power plant under contract to offer all its output to Bangladesh
+                                can now provide the domestic market</p>
                             <a href="business_news_1.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./../../images/market_business.jpg"
-                            alt="Business_news 2">
+                        <img src="./../../images/market_business.jpg" alt="Business_news 2">
                         <div class="homepage-Card">
                             <h3>Sensex snaps two-day losing streak on rebound in IT shares</h3>
-                            <p>Benchmark Sensex closed higher by 150 points on Wednesday, snapping its two-day losing streak following a rally in IT stocks amid a surge in the US markets.</p>
+                            <p>Benchmark Sensex closed higher by 150 points on Wednesday, snapping its two-day losing
+                                streak following a rally in IT stocks amid a surge in the US markets.</p>
                             <a href="business_news_2.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./../../images/economic_business.jpg"
-                            alt="Business_news 3">
+                        <img src="./../../images/economic_business.jpg" alt="Business_news 3">
                         <div class="homepage-Card">
                             <h3>Wholesale price inflation drops to 2.04% in July</h3>
-                            <p>Inflation in India’s wholesale prices dropped from a 16-month high of 3.4% in June, to 2.04% in July, with the rise in food prices</p>
+                            <p>Inflation in India’s wholesale prices dropped from a 16-month high of 3.4% in June, to
+                                2.04% in July, with the rise in food prices</p>
                             <a href="business_news_3.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./../../images/OLA_business.jpeg"
-                            alt="Business_news 4">
+                        <img src="./../../images/OLA_business.jpeg" alt="Business_news 4">
                         <div class="homepage-Card">
                             <h3>Ola Electric posts bigger Q1 loss as incentives drop, costs rise</h3>
-                            <p>Ola Electric reported a wider first-quarter loss August 14, 2024, hurt by the price cuts it took to boost demand after the government reduced incentives.</p>
+                            <p>Ola Electric reported a wider first-quarter loss August 14, 2024, hurt by the price cuts
+                                it took to boost demand after the government reduced incentives.</p>
                             <a href="business_news_4.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./../../images/agriculture_business.jpeg"
-                            alt="Business_news 5">
+                        <img src="./../../images/agriculture_business.jpeg" alt="Business_news 5">
                         <div class="homepage-Card">
                             <h3>VST ropes in Axis Bank to offer loan to farmers</h3>
-                            <p>VST Tillers Tractors Limited (VST), a farm equipment manufacturer, signed a Memorandum of Understanding (MOU) with Axis Bank</p>
+                            <p>VST Tillers Tractors Limited (VST), a farm equipment manufacturer, signed a Memorandum of
+                                Understanding (MOU) with Axis Bank</p>
                             <a href="business_news_5.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./../../images/money_business.jpg"
-                            alt="Business_news 6">
+                        <img src="./../../images/money_business.jpg" alt="Business_news 6">
                         <div class="homepage-Card">
                             <h3>Rupee rises 7 paise against US dollar in early trade</h3>
-                            <p>The Indian rupee appreciated 7 paise to 83.90 against the US dollar on August 14 2024 American currency retreated from its elevated levels.</p>
+                            <p>The Indian rupee appreciated 7 paise to 83.90 against the US dollar on August 14 2024
+                                American currency retreated from its elevated levels.</p>
                             <a href="business_news_6.html">Read more</a>
                         </div>
                     </div>
@@ -127,19 +128,15 @@
                 <div class="sidebar-section">
                     <h2>Latest News</h2>
                     <div>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/sport/football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/Business/business_news_5.html">VST ropes in Axis Bank to offer loan to farmers</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/Education/card2.html">CBSE elaborates guidelines for children with special needs</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
                     </div>
-                    <button>Load More +</button>
+                    <a href="./pages/Education/education.html"><button>Load More +</button></a>
                 </div>
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
@@ -236,4 +233,5 @@
     <!-- footer has been ended here -->
 
 </body>
+
 </html>
