--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -141,15 +141,15 @@
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
                     <div>
-                        <a href="./pages/sport/hocky.html">GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
+                        <a href="./../sport/hocky.html">GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
                         <hr>
-                        <a href="./pages/tech/tech1.html">Pixel Watch 3 With Brighter Display Launched in India .</a>
+                        <a href="./../tech/tech1.html">Pixel Watch 3 With Brighter Display Launched in India .</a>
                         <hr>
-                        <a href="./pages/Entertainment/ent-pages/page2.html">Multiple people charged in connection to Matthew Perry's death</a>
+                        <a href="./../Entertainment/ent-pages/page2.html">Multiple people charged in connection to Matthew Perry's death</a>
                         <hr>
-                        <a href="./pages/Business/business_news_6.html">Rupee rises 7 paise against US dollar in early trade</a>
+                        <a href="business_news_6.html">Rupee rises 7 paise against US dollar in early trade</a>
                     </div>
-                    <a href="./pages/Business/Business_News.html"><button>Load More +</button></a>
+                    <a href="./../worldnews/worldnews.html"><button>Load More +</button></a>
                 </div>
                 <div class="newsletter-section">
                     <h2>Subscribe to our Newsletter</h2>
