--- a/pages/culture/cultural_news.html
+++ b/pages/culture/cultural_news.html
@@ -75,7 +75,7 @@
                         <div class="homepage-Card">
                             <h3>Pandit Tanmoy Bose honored with Sri Chinmoy Culture-Light Award</h3>
                             <p>Tanmoy Bose received the Sri Chinmoy Culture-Light Award at the Sri Chinmoy Aspiration-Ground for his dedication to music, which captivates audiences globally and enriches cultural landscapes. His efforts evoke sensitivity to the music's ancient spirit.</p>
-                            <a href="">Read more</a>
+                            <a href="cultural_news2.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
@@ -83,7 +83,7 @@
                         <div class="homepage-Card">
                             <h3>Celebrating tradition: Nita Ambani stuns in a Kasavu sari on ..</h3>
                             <p>The biggest wedding of the year is just around the corner, and we can't keep calm. Anant Ambani and Radhika Merchant are all set to tie the knot on July 12, and their wedding festivities have already begun, grabbing all the headlines.</p>
-                            <a href="">Read more</a>
+                            <a href="cultural_news3.html">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                             <div class="homepage-Card">
                                 <h3>Knowing the early Mughals @ Humayun Museum in Delhi</h3>
                                 <p>As per reports, Union Culture Minister Gajendra Singh Shekhawat officially opened the museum, which showcases over 500 artefacts, many of which are on public display for the first time.</p>
-                                <a href="">Read more</a>
+                                <a href="cultural_news4.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
@@ -113,7 +113,7 @@
                                 <p>
                                     Amaan and Ayaan Ali Bangash, sons of sarod maestro Ustad Amjad Ali Khan, are known
                                     for their sarod duets. They also have successful solo careers.</p>
-                                <a href="">Read more</a>
+                                <a href="cultural_news5.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
@@ -125,7 +125,7 @@
                                     Americas Got Talent one of televisions biggest reality shows, seemed uncertain of
                                     what to expect as she opened her routine with an intricate alaap in Natabhairavi a
                                     grand devotional raga.</p>
-                                <a href="">Read more</a>
+                                <a href="cultural_news6.html">Read more</a>
                             </div>
                         </div>
                     </div>
