--- a/pages/culture/cultural_news2.html
+++ b/pages/culture/cultural_news2.html
@@ -9,144 +9,133 @@
 </head>
 
 <body>
-    <!-- started here navbar -->
 
-    <header>
-        <nav>
-            <div class="top-navbar">
-                <div>
-                    <h4>The</h4>
-                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
+    <body>
+        <!-- started here navbar -->
+
+        <header>
+            <nav>
+                <div class="top-navbar">
+                    <div>
+                        <h4>The</h4>
+                        <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                    </div>
+                    <div>
+                        <ul class="top-nav-list">
+                            <li><a href="./../../index.html">Home</a></li>|
+                            <li><a href="./../aboutusPage.html">About</a></li>|
+                            <li><a href="">Contact</a></li>|
+                            <li><a href="">Login</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <div class="top-nav-icons">
+                            <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
+                                    alt="facebook-icon" target="_blank"></a>
+                            <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
+                                    alt="instagram-icon"></a>
+                            <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
+                                    alt="telegram-icon"></a>
+                            <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
+                                    alt="youtube-icon"></a>
+                        </div>
+                        <div class="top-nav-search-bar">
+                            <input type="text" placeholder="Search news" />
+                            <img src="./../../images/magnifying-glass.png" />
+                        </div>
+                    </div>
                 </div>
+
                 <div>
-                    <ul class="top-nav-list">
-                        <li><a href="./../../index.html">Home</a></li>|
-                        <li><a href="./../aboutusPage.html">About</a></li>|
-                        <li><a href="">Contact</a></li>|
+                    <ul class="nav-list">
+                        <li><a href="">world news</a></li>
+                        <li><a href="">Sports</a></li>
+                        <li><a href="./../tech/tech.html">Tech</a></li>
+                        <li><a href="">Entertainment</a></li>
+                        <li><a href="">Business</a></li>
+                        <li><a href="">Culture</a></li>
+                        <li><a href="">Education</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+
+        <!--Read More content started-->
+        <div class="readmore-heading-details">
+            <a href="cultural_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+            <h1>Pandit Tanmoy Bose honored with Sri Chinmoy Culture-Light Award</h1>
+        </div>
+
+        <div class="img_container">
+            <img src="./../../images/culture22.jpg" alt="Pandit Tanmoy Bose" class="front_img" />
+            <div class="information_block">
+                Chinmoy Aspiration-Ground in Queens, New York, honoured tabla exponent Pandit Tanmoy Bose, with the prestigious Sri Chinmoy Culture-Light Award. This award is given to individuals with an extraordinary ability to illuminate humanity through their exceptional contributions in various cultural fields, including music, literature, visual arts, diplomacy, academics, and sports Pandit Bose has played tabla around the globe.I am deeply humbled and honoured to have received the Sri Chinmoy Culture-Light Award. Sri Chinmoys teachings of peace and harmony resonate deeply with my ethos, and I am grateful for this recognition of my efforts to bring the ancient spirit of music to audiences worldwide.
+                Discover how Pt. Tanmoy Bose received the Sri Chinmoy Culture-Light Award for his outstanding tabla performances at the Sri Chinmoy Aspiration-Ground in Queens, New York. Learn more about his contributions to the global cultural landscape. This award inspires me to continue my journey of spreading the light of music and fostering cultural understanding through my creative art said Bose, the maestro.
+            </div>
+        </div>
+
+        <!-- footer has been started from here -->
+
+        <footer>
+            <div class="footer-section">
+                <div class="footer-nav-links">
+                    <h3>Subscribe to our Newsletter</h3>
+                    <form>
+                        <input type="email" name="email" placeholder="Your email" required>
+                        <input type="text" name="name" placeholder="Your name" required>
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+                <div class="footer-nav-links">
+                    <h3>Links</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
                         <li><a href="">Login</a></li>
                     </ul>
                 </div>
-                <div>
-                    <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
-                                alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
-                                alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
-                                alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
-                                alt="youtube-icon"></a>
-                    </div>
-                    <div class="top-nav-search-bar">
-                        <input type="text" placeholder="Search news" />
-                        <img src="./../../images/magnifying-glass.png" />
+                <div class="footer-nav-links">
+                    <h3>Important Links</h3>
+                    <ul>
+                        <li><a href="">world news</a></li>
+                        <li><a href="">Sports</a></li>
+                        <li><a href="">Tech</a></li>
+                        <li><a href="">Entertainment</a></li>
+                        <li><a href="">Business</a></li>
+                        <li><a href="">Culture</a></li>
+                        <li><a href="">Education</a></li>
+                    </ul>
+                </div>
+                <div class="footer-nav-links">
+                    <h3>Address</h3>
+                    <ul>
+                        <li>4567 Shivaji Lane</li>
+                        <li>Chatrapati Nagar, Ward 12</li>
+                        <li>Nagpur, Maharashtra 440018
+                            India</li>
+                    </ul>
+                    <div class="footer-follow-us-Container">
+                        <h3>Follow Us</h3>
+                        <div class="top-nav-icons">
+                            <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
+                                    alt="facebook-icon" target="_blank"></a>
+                            <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
+                                    alt="instagram-icon"></a>
+                            <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
+                                    alt="telegram-icon"></a>
+                            <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
+                                    alt="youtube-icon"></a>
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <div>
-                <ul class="nav-list">
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="./../tech/tech.html">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
-                </ul>
+            <div class="footer-copyright-section">
+                <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
             </div>
-        </nav>
-    </header>
+        </footer>
 
-    <!--Read More content started-->
-    <div class="readmore-heading-details">
-        <a href="Businesani ds_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
-        <h1> The Tarun Tahiliefends Olympic uniforms criticism.</h1>
-    </div>
-    
-
-    <div class="img_container">
-        <img src="./../../images/culture1.webp" alt="Tarun Tahiliani" class="front_img" />
-        <div class="information_block">
-            Fashion designer Tarun Tahiliani has defended the uniforms he created for the Indian contingent at the 2024 Paris Olympics, despite facing significant backlash. Tahiliani emphasized the importance of focusing on the athletes performances rather than the 
-            controversy surrounding the attire. He also noted that some industrialists had shown 
-            interest in his designs reflecting a more positive reception from certain quarters.
-            Tahiliani renowned for his work in Indian fashion has always been celebrated for his 
-            ability to blend traditional elegance with contemporary flair.Regarding the Olympic 
-            uniforms Tahiliani expressed his commitment to the design despite the criticism. He 
-            clarified that the decision to dress female athletes in sarees was not made by him at 
-            the last minute, but he aimed to create a cohesive look that reflected the Indian flags colours. I stand by these uniforms Tahiliani affirmed. While opinions differ I believe 
-            in the symbolism and intention behind the design.
-            It's time to focus on the medals I think the fashion designer was quoted as saying.
-            The Olympic outfits drew criticism on social media with some labeling them as eyesores and "works of absolute mediocrity.The male athletes were dressed in white kurta pyjamas paired with jackets featuring the saffron and green of the Indian tricolor while the female athletes wore sarees.Former Indian badminton star Jwala Gutta voiced her disappointment on X (formerly Twitter) criticizing the decision to use sarees particularly given that not all female athletes are familiar with draping them. Gutta also expressed concerns about the fit and overall aesthetic of the garments.The garments made for the Indian contingent have been a 
-            huge disappointment Gutta wrote. 
-        </div>
-    </div>
-
-    <!-- footer has been started from here -->
-
-    <footer>
-        <div class="footer-section">
-            <div class="footer-nav-links">
-                <h3>Subscribe to our Newsletter</h3>
-                <form>
-                    <input type="email" name="email" placeholder="Your email" required>
-                    <input type="text" name="name" placeholder="Your name" required>
-                    <button type="submit">Subscribe</button>
-                </form>
-            </div>
-            <div class="footer-nav-links">
-                <h3>Links</h3>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Login</a></li>
-                </ul>
-            </div>
-            <div class="footer-nav-links">
-                <h3>Important Links</h3>
-                <ul>
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
-                </ul>
-            </div>
-            <div class="footer-nav-links">
-                <h3>Address</h3>
-                <ul>
-                    <li>4567 Shivaji Lane</li>
-                    <li>Chatrapati Nagar, Ward 12</li>
-                    <li>Nagpur, Maharashtra 440018
-                        India</li>
-                </ul>
-                <div class="footer-follow-us-Container">
-                    <h3>Follow Us</h3>
-                    <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
-                                alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
-                                alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
-                                alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
-                                alt="youtube-icon"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright-section">
-            <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
-        </div>
-    </footer>
-
-    <!-- footer has been ended here -->
-
-
-</body>
+        <!-- footer has been ended here -->
+    </body>
 
 </html>
