--- a/pages/Business/business_news_3.html
+++ b/pages/Business/business_news_3.html
@@ -24,8 +24,8 @@
                         <ul class="top-nav-list">
                             <li><a href="./../../index.html">Home</a></li>|
                             <li><a href="./../aboutusPage.html">About</a></li>|
-                            <li><a href="">Contact</a></li>|
-                            <li><a href="">Login</a></li>
+                            <li><a href="./../contact.html">Contact</a></li>|
+                            <li><a href="./../login.html">Login</a></li>
                         </ul>
                     </div>
                     <div>
@@ -48,13 +48,13 @@
 
                 <div>
                     <ul class="nav-list">
-                        <li><a href="">world news</a></li>
-                        <li><a href="">Sports</a></li>
+                        <li><a href="./../worldnews/worldnews.html">world news</a></li>
+                        <li><a href="./../sport/sport.html">Sports</a></li>
                         <li><a href="./../tech/tech.html">Tech</a></li>
-                        <li><a href="">Entertainment</a></li>
-                        <li><a href="">Business</a></li>
-                        <li><a href="">Culture</a></li>
-                        <li><a href="">Education</a></li>
+                        <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
+                        <li><a href="Business_News.html">Business</a></li>
+                        <li><a href="./../culture.html">Culture</a></li>
+                        <li><a href="./../Education/education.html">Education</a></li>
                     </ul>
                 </div>
             </nav>
@@ -109,22 +109,22 @@
                 <div class="footer-nav-links">
                     <h3>Links</h3>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Login</a></li>
+                        <li><a href="./../../index.html">Home</a></li>
+                        <li><a href="./../aboutusPage.html">About</a></li>
+                        <li><a href="./../contact.html">Contact</a></li>
+                        <li><a href="./../login.html">Login</a></li>
                     </ul>
                 </div>
                 <div class="footer-nav-links">
                     <h3>Important Links</h3>
                     <ul>
-                        <li><a href="">world news</a></li>
-                        <li><a href="">Sports</a></li>
-                        <li><a href="">Tech</a></li>
-                        <li><a href="">Entertainment</a></li>
-                        <li><a href="">Business</a></li>
-                        <li><a href="">Culture</a></li>
-                        <li><a href="">Education</a></li>
+                        <li><a href="./../worldnews/worldnews.html">world news</a></li>
+                        <li><a href="./../sport/sport.html">Sports</a></li>
+                        <li><a href="./../tech/tech.html">Tech</a></li>
+                        <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
+                        <li><a href="Business_News.html">Business</a></li>
+                        <li><a href="./../culture.html">Culture</a></li>
+                        <li><a href="./../Education/education.html">Education</a></li>
                     </ul>
                 </div>
                 <div class="footer-nav-links">
