--- a/pages/Entertainment/ent-pages/page1.html
+++ b/pages/Entertainment/ent-pages/page1.html
@@ -22,8 +22,8 @@
                     <ul class="top-nav-list">
                         <li><a href="./../../../index.html">Home</a></li>|
                         <li><a href="./../../../pages/aboutusPage.html">About</a></li>|
-                        <li><a href="">Contact</a></li>|
-                        <li><a href="">Login</a></li>
+                        <li><a href="./../../../pages/contact.html">Contact</a></li>|
+                        <li><a href="./../../login.html">Login</a></li>
                     </ul>
                 </div>
                 <div>
@@ -46,14 +46,13 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="./../../Entertainment/entertainment.html">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
-                </ul>
+                    <li><a href="./../../worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./../../sport/sport.html">Sports</a></li>
+                    <li><a href="./../../tech/tech.html">Tech</a></li>
+                    <li><a href="./../../Entertainment/entertainment.html">Entertainment</a></li>
+                    <li><a href="./../../Business/Business_News.html">Business</a></li>
+                    <li><a href="./../../culture.html">Culture</a></li>
+                    <li><a href="./../../Education/education.html">Education</a></li>
             </div>
         </nav>
     </header>
@@ -61,7 +60,7 @@
 
     <!--Read More content started-->
     <div class="readmore-heading-details">
-        <a href="./../entertainment.html"><img src="./../../../images/back-btn.png" class="back-btn" /></a>
+        <a href="./../entertainment.html"><img src="./../../../images/back-btn.png" class="back-btn" /></a> <br>
         <h1>Taylor Swift makes no mention of foiled Vienna terror attack plot as she resumes Eras Tour</h1>
     </div>
     <p>By: Alli Rosenbloom <span class="author">By</span></p>
