--- a/pages/Entertainment/ent-pages/page2.html
+++ b/pages/Entertainment/ent-pages/page2.html
@@ -61,7 +61,7 @@
 
     <!--Read More content started-->
     <div class="readmore-heading-details">
-        <a href="./../entertainment.html"><img src="./../../../images/back-btn.png" class="back-btn" /></a>
+        <a href="./../entertainment.html"><img src="./../../../images/back-btn.png" class="back-btn" /></a> <br>
         <h1>Multiple people charged in connection to Matthew Perry’s death</h1>
     </div>
     <p>By:Scott Glover, John Miller and Lisa Respers France <span class="author">By</span></p>
