--- a/pages/sport/sport.html
+++ b/pages/sport/sport.html
@@ -77,10 +77,10 @@
                         <img src="./../../images/rohitsharma"
                             alt="">
                         <div class="sport-Card">
-                            <h3>'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED TO  DOMINATE AGAINST SHRI  LANKA SPIN</h3>
-                            <p>After India's series defeat by Sri Lanka, captain Rohit Sharma expressed concerns about the team's struggles against spin and the lack of sweep shot.
+                            <h3>'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED....</h3>
+                            <p>After India's series defeat by Sri Lanka, captain Rohit Sharma expressed concerns about the team's struggles. captain Rohit Sharma voiced his worries
                             </p>
-                            <br>
+                            
                             <a href="./../../pages/sport/cricket.html">Read more</a>
                         </div>
                     </div>
@@ -88,10 +88,11 @@
                         <img src="./../../images/hockey"
                             alt="image not found">
                         <div class="sport-Card">
-                            <h3>'GREAT WALL':Sreejesh is a legend of hockey : India teammates</h3>
-                            <p>India's hockey team, led by PR Sreejesh, won a bronze medal India's hockey team, led by PR Sreejesh, won a bronze medal at the Paris Olympics by defeating Spain 2-1.
+                            <h3>'GREAT WALL':Sreejesh is a legend of hockey : India teammates</h3><p>
+    Fellow players praised Sreejesh, who recently retired, calling him a legend and an inspiration for future generations. 
+    India's hockey team, led by
 
-                                 <br><br><br><br><br>
+                                </p>
                               <a href="./../../pages/sport/hocky.html">Read more</a>
                               </div>
                     </div>
@@ -99,10 +100,10 @@
                         <img src="./../../images/football_news"
                             alt="image not found">
                         <div class="sport-Card">
-                            <h3>Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</h3>
-                            <p>It was during this crucial moment that Gurpreet Singh Sandhu, India's goalkeeper, showcased his exceptional skills by making an incredible save. Meanwhile, Mahesh Naorem successfully scored for India, while Gurpreet's save denied Kuwait a goal.</p>
-                            <a href="./football.html">Read more</a>
-                        </div>
+                            <h3>Gurpreet Singh Sandhu's brilliant save helps India win SAFF...</h3>
+                            <p>India emerged victorious in the SAFF Championship by defeating Kuwait in a thrilling penalty shoot-out.The match was evenly contested,</p>
+                        
+                            <a href="./../../pages/sport/football.html">Read more</a></div>
                     </div>
                 </div>
                   <br><br>
@@ -121,7 +122,7 @@
                             <div class="sport-Card">
                                 <h3>No matter how big a champion someone is, he does not always win, says Neeraj Chopra</h3>
                                 <p>This time Chopra, who relinquished the top spot to Pakistan’s Arshad Nadeem at the Stade de France in Paris the other night,
-                                     did not have the privilege of standing to the National anthem again, </p>
+                                     </p>
                                 <a href="./olympic.html">Read more</a>
                             </div>
                         </div>
@@ -131,6 +132,7 @@
                             <div class="sport-Card">
                                 <h3>Grit and glory: Swapnil Kusale eyes Los Angeles 2028 for an encore</h3>
                                 <p>Swapnil Kusale, a 29-year-old Kolhapur native, won India's third shooting bronze at Parise Olympic in the mens 50 m rifles 3 position event.
+                                    Grate achivement of swapnil kusale.
                                </p><br>
                                 <a href="./swapnil.html">Read more</a>
                             </div>
