made changes in sport   page

--- a/pages/sport/sport.html
+++ b/pages/sport/sport.html
@@ -110,17 +110,13 @@
                 <!-- second card container -->
 
                 
-                    <div class="sport-heading-details">
-                        <h1>Olympic sport News:</h1>
-                        
-                    </div>
                     <div class="sport-second-card-container">
                     <div class="cards">
                         <div class="card">
                             <img src="../../images/neeraj.webp"
                                 alt="no image found">
                             <div class="sport-Card">
-                                <h3>No matter how big a champion someone is, he does not always win, says Neeraj Chopra</h3>
+                                <h3>No matter how big a champion someone is, he does not always win,</h3>
                                 <p>This time Chopra, who relinquished the top spot to Pakistan’s Arshad Nadeem at the Stade de France in Paris the other night,
                                      </p>
                                 <a href="./olympic.html">Read more</a>
@@ -132,8 +128,8 @@
                             <div class="sport-Card">
                                 <h3>Grit and glory: Swapnil Kusale eyes Los Angeles 2028 for an encore</h3>
                                 <p>Swapnil Kusale, a 29-year-old Kolhapur native, won India's third shooting bronze at Parise Olympic in the mens 50 m rifles 3 position event.
-                                    Grate achivement of swapnil kusale.
-                               </p><br>
+                                    Grate achivement
+                               </p>
                                 <a href="./swapnil.html">Read more</a>
                             </div>
                         </div>
@@ -141,9 +137,9 @@
                             <img src="./../../images/vinesh phogat"
                                 alt="">
                             <div class="sport-Card">
-                                <h3>Timeline: How Vinesh Phogat's disqualification appeal was dismissed by CAS</h3>
+                                <h3>Timeline: How Vinesh Phogat's disqualification appeal...</h3>
                                     <p>Vinesh Pohgat's wait for positive outcome from her appeal to the court of Arbitration for sport (CAS), against her qualification at the paris Olympic ,
-                                        has finally ended after the sports' top court dismissed it on Wendnesday. </p>
+                                         </p>
                                 <a href="./vinesh.html">Read more</a>
                             </div>
                         </div>
