--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -135,36 +135,28 @@
                 <div class="sidebar-section">
                     <h2>Latest News</h2>
                     <div>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="../sport/football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="../Business/business_news_5.html">VST ropes in Axis Bank to offer loan to farmers</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="../Education/card2.html">CBSE elaborates guidelines for children with special needs</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="../Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
                     </div>
-                    <button>Load More +</button>
+                    <a href="../Education/education.html"><button>Load More +</button>
                 </div>
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
                     <div>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="../sport/hocky.html">GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="../tech/tech1.html">Pixel Watch 3 With Brighter Display Launched in India .</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="../Entertainment/ent-pages/page2.html">Multiple people charged in connection to Matthew Perry's death</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="../Business/business_news_6.html">Rupee rises 7 paise against US dollar in early trade</a>
                     </div>
-                    <button>Load More +</button>
+                    <a href="../Business/Business_News.html"><button>Load More +</button>
                 </div>
                 <div class="newsletter-section">
                     <h2>Subscribe to our Newsletter</h2>
