new changed added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,7 +20,7 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../index.html">Home</a></li>|
                         <li><a href="./../aboutusPage.html">About</a></li>|
                         <li><a href="">Contact</a></li>|
                         <li><a href="">Login</a></li>
@@ -90,9 +90,7 @@
 
         <label for="input meassage ">Message</label>
         <input type="meassage " id="input message " /><br/><br/>
-
-        <input type="text " placeholder="Send message " class="input " />
-    </form>
+        <input type="submit" value="send message" class="input" /> </form>
     </div>
     </div>
 
