--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,9 +21,9 @@
                 <div>
                     <ul class="top-nav-list">
                         <li><a href="./../index.html">Home</a></li>|
-                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="./aboutusPage.html">About</a></li>|
                         <li><a href="">Contact</a></li>|
-                        <li><a href="">Login</a></li>
+                        <li><a href="./login.html">Login</a></li>
                     </ul>
                 </div>
                 <div>
