css containt added

--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -165,41 +165,34 @@
 </div>
 
 <!-- third card container end -->
+ 
             </div>
             <div class="homepage-Sidebar">
                 <div class="sidebar-section">
                     <h2>Latest News</h2>
                     <div>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/sport/football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/Business/business_news_5.html">VST ropes in Axis Bank to offer loan to farmers</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/Education/card2.html">CBSE elaborates guidelines for children with special needs</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
                     </div>
-                    <button>Load More +</button>
+                    <a href="./pages/Education/education.html"><button>Load More +</button></a>
                 </div>
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
                     <div>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/sport/hocky.html">GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/tech/tech1.html">Pixel Watch 3 With Brighter Display Launched in India .</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/Entertainment/ent-pages/page2.html">Multiple people charged in connection to Matthew Perry's death</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a href="./pages/Business/business_news_6.html">Rupee rises 7 paise against US dollar in early trade</a>
                     </div>
-                    <button>Load More +</button>
+                    <a href="./pages/Business/Business_News.html"><button>Load More +</button></a>
                 </div>
                 <div class="newsletter-section">
                     <h2>Subscribe to our Newsletter</h2>
@@ -212,6 +205,9 @@
             </div>
         </div>
     </section>
+
+
+    <!-- ended card and sidebar sections -->
     <!-- footer has been started from here -->
 
     <footer>
